--- a/dicee.html
+++ b/dicee.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <h1>Refresh Me</h1>
+        <h1 class="result">Refresh Me</h1>
         <div class="btn"><button class="refreshBtn" onclick="refreshBtn()">Refresh</button></div>
         <div class="dice">
             <p>Player 1</p>
